# makadi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
assets/animation/: preview_animation.py
configs/: default.yaml
include/makadi/behaviors/: flee_from_pointer.hpp  flee_from_pointer_and_turn_away.hpp
include/makadi/config/: app_config.hpp  path_utils.hpp
include/makadi/core/: angle.hpp  behavior_tree.hpp  entity.hpp  pose2d.hpp  world.hpp
include/makadi/input/: pointer_provider.hpp
include/makadi/platform/: overlay_platform.hpp
include/makadi/render/: animated_sprite.hpp  overlay_window.hpp
src/: main.cpp
src/behaviors/: flee_from_pointer.cpp  flee_from_pointer_and_turn_away.cpp
src/config/: app_config.cpp  path_utils.cpp
src/core/: world.cpp
src/input/: pointer_provider.cpp
src/platform/: x11_overlay_platform.cpp
src/render/: animated_sprite.cpp  overlay_window.cpp
tests/: CMakeLists.txt  mock_pointer_provider.hpp  test_angle.cpp  test_animated_sprite.cpp  test_app_config.cpp  test_behaviors.cpp  test_main.cpp  test_path_utils.cpp  test_pose2d.cpp
